.metals/metals.log
2022.12.23 16:55:21 INFO  tracing is disabled for protocol LSP, to enable tracing of incoming and outgoing JSON messages create an empty file at /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/.metals/lsp.trace.json or /Users/calvinkhor/Library/Caches/org.scalameta.metals/lsp.trace.json
2022.12.23 16:55:22 INFO  logging to file /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/.metals/metals.log
2022.12.23 16:55:22 INFO  Started: Metals version 0.11.9 in workspace '/Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala' for client Visual Studio Code 1.74.2.
2022.12.23 16:55:23 INFO  time: initialize in 1.85s
2022.12.23 16:55:26 WARN  Build server is not auto-connectable.
2022.12.23 16:55:26 WARN  no build tool detected in workspace '/Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2022.12.23 16:55:26 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 16:55:32 INFO  no build target found for /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala. Using presentation compiler with project's scala-library version: 3.2.0
2022.12.23 16:55:34 INFO  time: code lens generation in 3.47s
2022.12.23 16:55:34 INFO  time: code lens generation in 8.25s
2022.12.23 16:55:41 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 16:56:13 ERROR scalafmt: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala:8: error: [dialect scala213] ; expected but : found
class Tweet(val user: String, val text: String, val retweets: Int):
                                                                  ^
2022.12.23 16:56:13 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 16:58:19 ERROR scalafmt: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala:8: error: [dialect scala213] ; expected but : found
class Tweet(val user: String, val text: String, val retweets: Int):
                                                                  ^
2022.12.23 16:58:19 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 17:16:51 ERROR scalafmt: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala:8: error: [dialect scala213] ; expected but : found
class Tweet(val user: String, val text: String, val retweets: Int):
                                                                  ^
2022.12.23 17:16:51 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 17:19:33 ERROR scalafmt: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala:8: error: [dialect scala213] ; expected but : found
class Tweet(val user: String, val text: String, val retweets: Int):
                                                                  ^
2022.12.23 17:19:33 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 17:19:36 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 17:19:37 ERROR scalafmt: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala:8: error: [dialect scala213] ; expected but : found
class Tweet(val user: String, val text: String, val retweets: Int):
                                                                  ^
2022.12.23 17:19:37 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 19:30:59 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetData.scala
2022.12.23 19:31:19 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetReader.scala
2022.12.23 19:57:06 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 19:57:10 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 19:57:11 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 19:57:20 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 19:57:22 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 19:57:27 ERROR scalafmt: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala:8: error: [dialect scala213] ; expected but : found
class Tweet(val user: String, val text: String, val retweets: Int):
                                                                  ^
2022.12.23 19:57:27 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 20:05:11 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 20:05:13 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 20:05:33 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 20:05:35 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 20:05:43 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
2022.12.23 20:07:08 WARN  no build target for: /Users/calvinkhor/Documents/Docs, PDFs/Coding/scala/learning_scala/coursera/w3/objsets/src/main/scala/objsets/TweetSet.scala
